Ajustement effectués sur les pages html et ajout des nouveaux chemins pour les ressources img

--- a/Front end/Formulaire de connexion.html
+++ b/Front end/Formulaire de connexion.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
-            background-image: url('c:/Users/User/Desktop/Project_dev_Web/ecfStudi/frontEnd/istockphoto-1419766496-612x612.WEBP');
+            background-image: url('c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/istockphoto-1419766496-612x612.WEBP');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -258,19 +258,23 @@
     </div>
 
     <div class="container">
-        <h2 class="logo"><img src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/logoEsportify.png">
+        <h2 class="logo"><img
+                src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/logoEsportify.png">
         </h2>
 
         <section id="diaporama">
-            <img src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/Thumbnail.WEBP" alt="Image 5">
-            <img class="lol" src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/lol.jpg" alt="Image 1">
-            <img src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/pubg-circle-battlegrounds-photo-23.png"
+            <img src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/Thumbnail.WEBP"
+                alt="Image 5">
+            <img class="lol"
+                src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/lol.jpg"
+                alt="Image 1">
+            <img src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/pubg-circle-battlegrounds-photo-23.png"
                 alt="Image 2">
-            <img src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/deavth1-e3d3503e-41e2-4707-8b3b-8130272df7de.png"
+            <img src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/deavth1-e3d3503e-41e2-4707-8b3b-8130272df7de.png"
                 alt="Image 3">
-            <img src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/esport-france-equipes-streamers.jpg"
+            <img src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/esport-france-equipes-streamers.jpg"
                 alt="Image 4">
-            <img src="c:/Users/User/Desktop/Project_dev_Web/ecfStudi/ressourcesImg/lfldays-nice-j1-047-1-scaled.WEBP"
+            <img src="c:/Users/User/Desktop/Project_dev_Web/Projets et produits/Rudy_Bernard_Ecf/Front end/ressourcesImg/lfldays-nice-j1-047-1-scaled.WEBP"
                 alt="Image 6">
             <div>
                 <button onclick="prevSlide()">Précédent</button>
